--- a/index.html
+++ b/index.html
@@ -6,6 +6,63 @@
     <title>Mini Project JS 1</title>
 </head>
 <body>
+
+    <div class="container">
+        <h1>PASSWORD GENERATOR</h1>
+        
+        <div class="display-container">
+            <input readonly placeholder="Password" class="display" data-passwordDisplay>
+
+            <button>
+                <span data-copyMsg></span>
+                <img src="./assets/copy.svg" alt="copy" width="23" height="23">
+            </button>
+
+        </div>
+
+        <div class="input-container">
+
+            <div class="length-container">
+                <p>Password Length</p>
+                <p data-lengthNumber="">0</p>
+            </div>
+
+            <input type="range" min="1" max="20" class="slider" step="1" data-lenghtSlider>
+
+            <div>
+                <input type="checkbox" id="upprecase">
+                <label for="uppercase">Include UpperCase Letters</label>
+            </div>
+
+            <div>
+                <input type="checkbox" id="lowercase">
+                <label for="uppercase">Include Lowwercase Letters</label>
+            </div>
+
+            <div>
+                <input type="checkbox" id="numbers">
+                <label for="uppercase">Include Numbers </label>
+            </div>
+
+            <div>
+                <input type="checkbox" id="symbols">
+                <label for="uppercase">Include symbols </label>
+            </div>
+
+            <!-- strenght section -->
+            <div class="strength-container">
+                <p>strength</p>
+                <div data-indicator></div>
+            </div>
+
+            <!-- generate password -->
+
+            <button class="generateButton">Generate Password</button>
+
+        </div>
+    </div>
+
+
     <script src="index.js"></script>
 </body>
 </html>
