updated html file

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="display-container">
             <input readonly placeholder="Password" class="display" data-passwordDisplay>
 
-            <button>
+            <button data-copyBtn>
                 <span data-copyMsg></span>
                 <img src="./assets/copy.svg" alt="copy" width="23" height="23">
             </button>
@@ -27,10 +27,10 @@
                 <p data-lengthNumber="">0</p>
             </div>
 
-            <input type="range" min="1" max="20" class="slider" step="1" data-lenghtSlider>
+            <input type="range" min="1" max="20" class="slider" step="1" data-lengthSlider>
 
             <div>
-                <input type="checkbox" id="upprecase">
+                <input type="checkbox" id="uppercase">
                 <label for="uppercase">Include UpperCase Letters</label>
             </div>
 
@@ -63,6 +63,6 @@
     </div>
 
 
-    <script src="index.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
