js code complete for pwd generator

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="display-container">
             <input readonly placeholder="Password" class="display" data-passwordDisplay>
 
-            <button data-copyBtn>
+            <button data-copy>
                 <span data-copyMsg></span>
                 <img src="./assets/copy.svg" alt="copy" width="23" height="23">
             </button>
@@ -63,6 +63,6 @@
     </div>
 
 
-    <script src="script.js"></script>
+    <script src="script.js" ></script>
 </body>
 </html>
