--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mini Project JS 1</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -52,7 +53,7 @@
             <!-- strenght section -->
             <div class="strength-container">
                 <p>strength</p>
-                <div data-indicator></div>
+                <div class="indicator"  data-indicator></div>
             </div>
 
             <!-- generate password -->
